sfpopos/src/POPOSSpace.css
.POPOSSpace {
  width: 100%;
  text-align: center;
}

.POPOSSpace > img {
  width: 100%;
  height: auto;
  border: solid 2px black;
  border-radius: 3px;
}

.POPOSSpace > h1 {
  font-size: 25px;
}
img {
  height: auto;
  border: solid 2px black;
  border-radius: 3px;
}

